# HDRM

./: CMakeLists.txt  MNISTReader.h  MNISTReaders.cpp  NeuralNetwork.cpp  NeuralNetwork.h  README.md  main.cpp
